# indiestudio

./: CMakeLists.txt  bl.iqm
assets/: LookAnimation.iqm  floor.mtl
assets/animations/: bomberman_fly_animation.iqm  bomberman_talk_animation.iqm  look_animation.iqm  look_og_animation.iqm  run_animation.iqm  run_og_animation.iqm  salut_animation.iqm  scaring_look_animation.iqm  scaring_og_look_animation.iqm
assets/models/: bomb.mtl  bomberman.iqm  character_model.iqm  fire.mtl  pipe_model.mtl
assets/models/grassBlock/: block.mtl
assets/models/menu_floorDestroyed/: block.mtl
assets/models/woodBlock/: block.mtl
src/: CMakeLists.txt
src/InputBox/: InputBox.cpp  InputBox.hpp  KeyDictionnary.cpp  KeyDictionnary.hpp
src/game/: Assets.hpp
src/game/Button/: Button.cpp  Button.hpp
src/game/Models/: ModelMenu.cpp  ModelMenu.hpp
src/game/inputHandler/: InputHandler.cpp  InputHandler.hpp  KeyBoardKeys.hpp  PlayersInputs.cpp  PlayersInputs.hpp
src/game/saver/: Config.hpp  SavedEntity.cpp  SavedEntity.hpp  SavedGame.cpp  SavedGame.hpp  Saver.hpp
src/game/sceneHandler/: AScene.hpp  IScene.hpp  SceneGame.cpp  SceneGame.hpp  SceneHandler.cpp  SceneHandler.hpp  SceneLoad.cpp  SceneLoad.hpp  SceneMain.cpp  SceneMain.hpp  SceneOption.cpp  SceneOption.hpp  SceneSplash.cpp  SceneSplash.hpp
src/game/sceneHandler/OptionScenes/: SceneAudio.cpp  SceneAudio.hpp  SceneController.cpp  SceneController.hpp  SceneCredits.cpp  SceneCredits.hpp  SceneHTP.cpp  SceneHTP.hpp  SceneKeyboard.cpp  SceneKeyboard.hpp  SceneProfil.cpp  SceneProfil.hpp  SceneSettings.cpp  SceneSettings.hpp
src/gameEngine/: Error.cpp  Error.hpp  GameEngine.cpp  GameEngine.hpp  Generator.cpp  Generator.hpp  TileMap.cpp  TileMap.hpp  main.cpp
src/gameEngine/entity/: Bomb.cpp  Bomb.hpp  Box.cpp  Box.hpp  Ground.cpp  Ground.hpp  IaPlayer.cpp  IaPlayer.hpp  Player.cpp  Player.hpp  Wall.cpp  Wall.hpp
src/gameEngine/entity/interface/: AEntity.cpp  AEntity.hpp  IEntity.hpp
src/gameEngine/ia/: Ia.cpp  Ia.hpp
src/gameEngine/movement/: MovementManager.cpp  MovementManager.hpp
src/network/: Network.cpp  Network.hpp  Packet.hpp
src/network/error/: Error.cpp  Error.hpp
src/network/protocol/: TcpNetwork.cpp  TcpNetwork.hpp
src/raylib/: include.hpp
src/raylib/camera/: Camera3D.cpp  Camera3D.hpp
src/raylib/color/: Color.cpp  Color.hpp
src/raylib/error/: Error.cpp  Error.hpp
src/raylib/gamepad/: Gamepad.cpp  Gamepad.hpp
src/raylib/keyboard/: Keyboard.cpp  Keyboard.hpp
src/raylib/model/: Model.cpp  Model.hpp  ModelAnimation.cpp  ModelAnimation.hpp
src/raylib/mouse/: Mouse.cpp  Mouse.hpp
src/raylib/music/: Music.cpp  Music.hpp
src/raylib/rectangle/: Rectangle.cpp  Rectangle.hpp
src/raylib/sound/: Sound.cpp  Sound.hpp
src/raylib/text/: Font.cpp  Font.hpp  Text.cpp  Text.hpp
src/raylib/texture/: Texture2D.cpp  Texture2D.hpp
src/raylib/vector/: Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
src/raylib/window/: Window.cpp  Window.hpp
